--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,7 +11,7 @@
       </li>
       <li class="menu-text">
         <a class="button large expanded"
-           routerLink="/">Orders</a>
+           routerLink="/orders">Orders</a>
       </li>
     </ul>
   </div>
