--- a/client/src/app/components/orders/orders.component.html
+++ b/client/src/app/components/orders/orders.component.html
@@ -8,8 +8,8 @@
   </thead>
   <tbody>
   <tr *ngFor="let item of orders">
-    <td>{{item.orderId}}</td>
-    <td>{{item.orderDate}}</td>
+    <td>{{item.id}}</td>
+    <td>{{item.date}}</td>
   </tr>
   </tbody>
 </table>
