--- a/client/src/app/components/checkout/checkout.component.html
+++ b/client/src/app/components/checkout/checkout.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="medium-4 columns text-right">
     <a class="success button expanded"
-       routerLink="/confirmed">Purchase Order</a>
+       routerLink="/confirmed" (click)="saveOrder()">Purchase Order</a>
     <a class="warning button expanded"
        routerLink="/">Continue Shopping</a>
   </div>
