add quantity to products

--- a/client/src/app/components/manager/manager.component.html
+++ b/client/src/app/components/manager/manager.component.html
@@ -38,6 +38,7 @@
       <th scope="col">Name</th>
       <th scope="col">Description</th>
       <th scope="col">Price</th>
+      <th scope="col">Quantity</th>
     </tr>
     </thead>
     <tbody>
@@ -45,6 +46,7 @@
       <td>{{item.name}}</td>
       <td>{{item.description}}</td>
       <td>{{item.price}}</td>
+      <td>{{item.quantity}}</td>
     </tr>
     </tbody>
   </table>
