--- a/client/src/app/components/manager/manager.component.html
+++ b/client/src/app/components/manager/manager.component.html
@@ -16,17 +16,17 @@
   <form>
     <div class="form-group">
       <label>name</label>
-      <input type="text" class="form-control" id="nameInput" placeholder="Enter name">
+      <input name="name" type="text" class="form-control" id="nameInput" placeholder="Enter name" [(ngModel)]="newProduct.name">
     </div>
     <div class="form-group">
       <label>description</label>
-      <input type="text" class="form-control" id="descriptionInput" placeholder="Enter description">
+      <input name="description" type="text" class="form-control" id="descriptionInput" placeholder="Enter description" [(ngModel)]="newProduct.description">
     </div>
     <div class="form-group">
       <label>price</label>
-      <input type="number" class="form-control" id="priceInput" placeholder="Enter price">
+      <input name="price" type="number" class="form-control" id="priceInput" placeholder="Enter price" [(ngModel)]="newProduct.price">
     </div>
-    <button type="submit" class="button">Save</button>
+    <button type="submit" class="button" (click)="onSave()">Save</button>
   </form>
 </div>
 
@@ -45,6 +45,7 @@
       <td>{{item.name}}</td>
       <td>{{item.description}}</td>
       <td>{{item.price}}</td>
+      <td><button type="button" class="btn btn-danger" (click)="onDelete(item.id)">X</button></td>
     </tr>
     </tbody>
   </table>
